"ChangeLog"

# NOTE: the latest CVS tag must appear in the first 10 lines of this ChangeLog.
# This version tag is used in building "main/version.cc".

2006-03-23	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-78-05-prsim-01-02:
	  Added -h option to prsim main module for command help,
		with optional objfile, equivalent to "help all" in interpreter.
	  Redefined some command-class macros for "sim/prsim/Command.h".
	  Implemented 'fanout' 'assert' and 'assertn' commands.  
	  Added bunch of utility methods to expr/node/state classes.  


2006-03-22	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-78-05-prsim-01-01:
	  Branch for resuming prsim development.  
	  Templated EventQueue and EventPlaceholder classes.  
	  Implemented 'set' and 'queue' commands in interface.  
	  EventPool now reserves the 0-indexed (invalid) entry so 
		it should not be touched.
	  NodeState class extends Node with stateful information.
		Ideally, Node should only contain structural information.  
	  Some generally useful short functions added.  
	  State class: added current_time, a few methods for
		event queue changes and printing feedback.  


2006-03-21	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-78-05:
	  No source change.
	  Enabled alloc-target object consistency checks in test dirs.


	* HACKT-00-01-04-main-00-78-04:
	  Important: hash_mapped structures are now saved and restored
		persistently with precise order reconstruction within
		each bucket -- the trick was to reverse the buckets
		on write-out so that bucket insertion on reconstruction
		would result in the original ordering.  
		Affected classes: scopespace, entity::footprint.
	  Now, we have enabled perfect object reproduction across
		various compile phases, so haco -> haco-u -> haco-c
		results in the identical object produced by haco -> haco-c.
		Many tests enabled to confirm this behavior.  